--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                 <version>1.2.1</version>
 
                 <configuration>
-                    <mainClass>mestint.Main</mainClass>
+                    <mainClass>gui.Main</mainClass>
                     <classpathScope>test</classpathScope>
                     <arguments>
                         <argument>-Xmx512m</argument>
